code-first inheritance example
